@@ -1,0 +1,43 @@
+{
+  "auto_detect": "yes",
+  "customize": {
+    "add_only_with_version": "yes",
+    "add_to_path": "yes",
+    "build_dir_name": "perl",
+    "check_that_exists": "yes",
+    "ck_version": 10,
+    "env_prefix": "CK_ENV_COMPILER_PERL",
+    "languages": [
+      "PERL"
+    ],
+    "limit_recursion_dir_search": {
+      "linux": 3,
+      "win": 4
+    },
+    "only_for_target_os_tags": [
+      "windows",
+      "linux"
+    ],
+    "soft_file": {
+      "linux": "perl",
+      "win": "perl.exe"
+    },
+    "soft_file_from_host_os": "yes",
+    "soft_path_example": {
+      "linux": "/usr/bin/perl",
+      "win": "C:\\Program Files\\Java\\jdk1.8.0_77\\bin\\javac.exe"
+    },
+    "soft_version_cmd": {
+      "linux": "-version > $#filename#$ 2>&1",
+      "win": "-version > $#filename#$ 2>&1"
+    }
+  },
+  "env": {
+  },
+  "soft_name": "Perl",
+  "tags": [
+    "compiler",
+    "perl",
+    "lang-perl"
+  ]
+}
